--- a/onlinebookstore.html
+++ b/onlinebookstore.html
@@ -3,6 +3,7 @@
 <head>
   <title>Bookstore Website</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
@@ -30,21 +31,21 @@
         <img src="book1.jpg" alt="Book 1">
         <h3>Book 1 Title</h3>
         <p>Author Name</p>
-        <a href="#" class="btn">Details</a>
+        <a href="#" class="btn" onclick="showDetails('Book 1 Title')">Details</a>
       </div>
       
       <div class="book">
         <img src="book2.jpg" alt="Book 2">
         <h3>Book 2 Title</h3>
         <p>Author Name</p>
-        <a href="#" class="btn">Details</a>
+        <a href="#" class="btn" onclick="showDetails('Book 2 Title')">Details</a>
       </div>
       
       <div class="book">
         <img src="book3.jpg" alt="Book 3">
         <h3>Book 3 Title</h3>
         <p>Author Name</p>
-        <a href="#" class="btn">Details</a>
+        <a href="#" class="btn" onclick="showDetails('Book 3 Title')">Details</a>
       </div>
     </section>
   </main>
